# vox-uristi

./: .gitignore  Cargo.toml  README.md  build.rs  mat_test.vox
.github/: dependabot.yml
.github/workflows/: jekyll-gh-pages.yml  release.yml  rust.yml
assets/: prefabs.yaml
assets/buildings/: Armorstand.vox  BarsFloor.vox  Box.vox  Bridge.vox  Cage.vox  Door.vox  GearAssembly.vox  GrateFloor.vox  OfferingPlace.vox  ScrewPump.vox  Slab.vox  Support.vox  Wagon.vox  Weaponrack.vox  Well.vox  Windmill.vox
assets/buildings/Furnace/: MagmaGlassFurnace.vox  MagmaSmelter.vox  Smelter.vox
assets/buildings/SiegeEngine/: Ballista.vox  BoltThrower.vox
assets/buildings/Trap/: TrackStop.vox
assets/buildings/Workshop/: Carpenters.vox  Fishery.vox  Jewelers.vox  Leatherworks.vox  MagmaForge.vox  Mechanics.vox  MetalsmithsForge.vox  Quern.vox
models/: .gitignore  1x1.vox  3x3.vox  5x5.vox  meta.yaml
models/buildings/: ArcheryTarget.vox  Armorstand.vox  AxleHorizontal.vox  AxleVertical.vox  Bed.vox  Bookcase.vox  Cabinet.vox  Hatch.vox  Instrument.vox  Statue.vox  TradeDepot.vox  Weaponrack.vox
models/buildings/Furnace/: GlassFurnace.vox  Kiln.vox  MagmaGlassFurnace.vox  MagmaKiln.vox  MagmaSmelter.vox  Smelter.vox  WoodFurnace.vox
models/buildings/SiegeEngine/: Ballista.vox  Catapult.vox
models/buildings/Trap/: Lever.vox  StoneFallTrap.vox  WeaponTrap.vox
models/buildings/Workshop/: Ashery.vox  Bowyers.vox  Butchers.vox  Carpenters.vox  Clothiers.vox  Craftsdwarfs.vox  Dyers.vox  Farmers.vox  Fishery.vox  Jewelers.vox  Kennels.vox  Kitchen.vox  Leatherworks.vox  MagmaForge.vox  Masons.vox  Mechanics.vox  SOAP_MAKER.vox  Siege.vox  Still.vox
site/: Gemfile  _config.yml  index.md
site/_data/: navigation.yml
site/_includes/: latest-download-linux.html  latest-download-windows.html  latest-download.html
site/_includes/head/: custom.html
site/_layouts/: default.html
site/_pages/: changelog.md  gallery.md  tips.md  usage.md
site/_sass/: custom.scss
site/assets/: style.scss
site/assets/css/: style.scss
src/: app.rs  block.rs  building.rs  building_type.rs  calendar.rs  cli.rs  context.rs  coords.rs  direction.rs  dot_vox_builder.rs  export.rs  flow.rs  main.rs  map.rs  maths.rs  models.rs  palette.rs  prefabs.rs  rfr.rs  shape.rs  tile.rs  tile_iterator.rs  tile_plant.rs  traits.rs  ui.rs  update.rs  voxel.rs
src/building/: bridge.rs  building_type.rs  collect.rs  display_case.vox  extensions.rs  furnace.vox  furniture.rs  mod.rs  piano.vox  smelter.vox  trade_depot.vox  well.vox  workshop.rs  workshop.vox  workshop_ashery.vox  workshop_carpenter.vox  workshop_clothier.vox  workshop_farmer.vox  workshop_fishery.vox  workshop_kitchen.vox  workshop_leather.vox  workshop_loom.vox  workshop_metalsmith.vox  workshop_still.vox
src/export/: block.rs  building.rs  context.rs  flow.rs  map.rs  palette.rs  prefabs.rs  tile.rs
src/export/tile/: generic.rs  track.rs  tree.rs
src/flow/: mod.rs
src/prefabs/: meta.yaml
src/prefabs/buildings/: AnimalTrap.vox  AxleHorizontal.vox  BarsVertical.vox  Bed.vox  Bookcase.vox  Chain.vox  Chair.vox  FarmPlot.vox  Floodgate.vox  GearAssembly.vox  Hive.vox  NestBox.vox  OfferingPlace.vox  RoadPaved.vox  ScrewPump.vox  Table.vox  TradeDepot.vox  WaterWheel.vox  Weapon.vox  Windmill.vox  WindowGem.vox
src/prefabs/buildings/Furnace/: GlassFurnace.vox  Kiln.vox  MagmaKiln.vox
src/prefabs/buildings/Workshop/: Ashery.vox  Clothiers.vox  Farmers.vox  Loom.vox  Masons.vox  Millstone.vox
src/tile/: collect.rs  extensions.rs  generic.rs  mod.rs  plant.rs  tree.rs
src/ui/: cli.rs  gui.rs  mod.rs  tui.rs
src/ui/cli/: dev.rs
src/ui/gui/: app.rs
src/ui/tui/: tuian.rs  widgets.rs
