[package]
name = "vox-uristi"
version = "0.15.1"
edition = "2021"

[features]
default = ["gui", "self-update"]
gui = ["eframe", "opener", "rfd"]
dev = ["protobuf-json-mapping"]
self-update = ["reqwest"]


[dependencies]
anyhow = "1.0.98"
bitflags = "2.9.1"
clap = { version = "4.5.42", features = ["derive"] }
derive_more = { version = "2.0.1", features = ["deref"] }
dfhack-remote = "0.10.0"
dot_vox = { git = "https://github.com/dust-engine/dot_vox.git", branch = "master" } # unreleased ability to write materials
easy-ext = "1.0.2"
eframe = { version = "0.32.0", features = ["persistence"], optional = true }
glob-match = "0.2.1"
include_dir = { version = "0.7.4", features = ["glob"] }
indicatif = "0.17.11"
itertools = "0.14.0"
lazy_static = "1.5.0"
num-integer = "0.1.46"
num_enum = "0.7.4"
opener = { version = "0.8.2", features = ["reveal"], optional = true }
palette = "0.7.6"
protobuf = { version = "=3.7.2" }
protobuf-json-mapping = { version = "=3.7.2", optional = true }
rand = "0.9.2"
reqwest = { version = "0.12.22", features = [
    "blocking",
    "json",
], optional = true }
rfd = { version = "0.15.4", optional = true }
rgb = "0.8.52"
semver = "1.0.26"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
strum = { version = "0.27.2", features = ["derive"] }
tracing-subscriber = "0.3.19"

[build-dependencies]
image = "0.25.6"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[package.metadata.winres]
ProductName = "Vox Uristi"

[profile.release]
#debug = true
strip = true
lto = true
opt-level = "z"
codegen-units = 1
