[package]
name = "vox-uristi"
version = "0.17.0"
edition = "2021"

[features]
default = ["gui", "self-update"]
gui = ["eframe", "opener", "rfd"]
dev = ["serde_json"]
self-update = ["reqwest"]

[dependencies]
anyhow = "1"
bitflags = "2"
clap = { version = "4", features = ["derive"] }
derive_more = { version = "2", features = ["deref"] }
dfhack-remote = { version = "0.11", path = "../dfhack-remote" }
dot_vox = { git = "https://github.com/dust-engine/dot_vox.git", branch = "master" } # unreleased ability to write materials
easy-ext = "1"
eframe = { version = "0.33", features = ["persistence"], optional = true }
glob-match = "0.2"
include_dir = { version = "0.7", features = ["glob"] }
indicatif = "0.18"
itertools = "0.14"
lazy_static = "1"
num-integer = "0.1"
num_enum = "0.7"
opener = { version = "0.8", features = ["reveal"], optional = true }
palette = "0.7"
prost = "0.14"
rand = "0.10"
reqwest = { version = "0.13", features = ["blocking", "json"], optional = true }
rfd = { version = "0.17", optional = true }
rgb = "0.8"
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", optional = true }
serde_yaml = "0.9"
strum = { version = "0.27", features = ["derive"] }
tracing-subscriber = "0.3"

[build-dependencies]
image = "0.25.10"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[package.metadata.winres]
ProductName = "Vox Uristi"

[profile.release]
#debug = true
strip = true
lto = true
opt-level = "z"
codegen-units = 1
